--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a>Home</a></li>
                 <li>|</li>
-                <li><a>HTML Cheat Sheet</a></li>
+                <li id="csHtml"><a>HTML Cheat Sheet</a></li>
                 <li>|</li>
                 <li><a>CSS Cheat Sheet</a></li>
             </ul>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </aside>
-            <div class="mainContent">
+            <div id="main" class="mainContent">
                 <div class="outerBox"> <!-- 경험-->
                     <span>Experience</span>
 
@@ -142,6 +142,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="script.js"></script>
     </body>
     <footer>
 
